Aug 15th, 2004: Alex Burger <alex_b@users.sourceforge.net>
- Moved xx_ping_on_insert check before if (defined ($dbh..))

Aug 10th, 2004: Alex Burger <alex_b@users.sourceforge.net>
- Added database ping support to PostgreSQL and DBD::ODBC.  Added debug
  logging improvements for database connect and INSERT sections.  Thanks
  to mike at mccartney.net.

Debug output now prints out $n variable number beside 'Ent Value x' such as 
  'Ent Value 2 ($3):' to reduce confusion when troubleshooting.

Aug 9th, 2004: Alex Burger <alex_b@users.sourceforge.net>
- Debug output now prints out $n variable number beside 'Ent Value x' such as 
  'Ent Value 2 ($3):' to reduce confusion when troubleshooting.

July 14th, 2004: Alex Burger <alex_b@users.sourceforge.net>
- snmpttconvertmib:  Fix bug with infinite loop when processing VARIABLES
  section if MIB file had spaces after }.  Thanks to mike at mccartney.net

July 5th, 2004: Alex Burger <alex_b@users.sourceforge.net>
- Add SEC documentation
- Update help for snmpttconvertmib

June 25th, 2004: Alex Burger <alex_b@users.sourceforge.net>
- Changed mysql_ping_insert to mysql_ping_on_insert.
- Added $Fz variable which outputs the processed FORMAT line for use in 
  EXEC lines so if the FORMAT and EXEC lines contain the same thing (minus
  the program to execute of course) the EXEC line can be simplified.
- Removed mib_descriptions_enable and replaced with description_mode and
  description_clean.  Can now use the description from either the 
  SNMPTT.CONF or the MIB files.
- Snmpttconvertmib:  Bug:  Was not parsing OBJECTS lines, only 
  VARIABLES lines.

June 24th, 2004: Alex Burger <alex_b@users.sourceforge.net>
- Removed references from sub substitute2.

June 23th, 2004: Alex Burger <alex_b@users.sourceforge.net>
- Added config option mysql_ping_insert to enable / disable pinging the
  database before an INSERT.
- Changed ping_mysql subroutine to mysql_ping

June 18th, 2004: Alex Burger <alex_b@users.sourceforge.net>