@@ -37,7 +37,7 @@ snmptt.ini</a><br />
 <a href="#LoggingStandard">Logging</a><br />
 <b>&nbsp;&nbsp;</b> <a href="#LoggingStandard">Standard</a><br />
 <b>&nbsp;&nbsp;</b> <a href=
-"file:///C:/msys/1.0/home/axbu/cvs/snmptt/docs/snmptt.html#LoggingUnknown">
+"#LoggingUnknown">
 Unknown Traps</a><br />
 <b>&nbsp;&nbsp;</b> <a href="#LoggingSyslog">Syslog</a><br />
 <b>&nbsp;&nbsp;</b> <a href="#LoggingEventLog">EventLog</a><br />
@@ -868,7 +868,7 @@ translate correctly.&nbsp; See the FAQ for more info.</span></div>
 1.&nbsp;</b> This setting will take effect no matter what is used
 on the command line.</p>
 <p>7.&nbsp; See the <a href=
-"file:///H:/cvs/snmptt/readme.html#SecuringSNMPTT">Securing
+"#SecuringSNMPTT">Securing
 SNMPTT</a> section.</p>
 <br />
 <h3><a id="Installation-Windows" name=
@@ -916,7 +916,7 @@ FAQ for more info.<br /></span><br />
 on the command line.<br />
 <br />
 6.&nbsp; See the <a href=
-"file:///H:/cvs/snmptt/readme.html#SecuringSNMPTT">Securing
+"#SecuringSNMPTT">Securing
 SNMPTT</a> section.<br />
 <br />
 <p><b><u>Windows NT EventLog:</u></b></p>
